Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
         <h3>
 <a id="yes-not-a-ninja-developer-looking-for-a-job" class="anchor" href="#yes-not-a-ninja-developer-looking-for-a-job" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yes, not a ninja developer looking for a job.</h3>
 
-<p>This is</p>
-
 <h3>
 <a id="professional-experience" class="anchor" href="#professional-experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional experience</h3>
 
 <ul>
-<li>Project Lead, Oracle Corporation, CA US, Mar 2013 – Present</li>
+<li>Project Lead, Oracle Corporation, CA US, Mar 2013 – Present
+** CLM</li>
 <li>Sr. Application Developer, Oracle Corporation, CA US, Mar 2011 – 2013
--- Develop product enhancement-- purchasing update APIs, Endeca integration, and Oracle Supplier Network application.
--- Initiate China procurement development team and provided on-site knowledge transition.</li>
-<li><p>Application Developer, Oracle Corporation, CA US, Mar 2009 – 2011
--- Develop spend-classification application with Oracle BI, data miner, and ADF; conduct hands-on lab sessions in Oracle OpenWorld (2011- 2013) and provide tech support for pilot customers.</p></li>
+** Develop product enhancement-- purchasing update APIs, Endeca integration, and Oracle Supplier Network application.
+** Initiate China procurement development team and provided on-site knowledge transition.</li>
+<li>Application Developer, Oracle Corporation, CA US, Mar 2009 – 2011
+** Develop spend-classification application with Oracle BI, data miner, and ADF; conduct hands-on lab sessions in Oracle OpenWorld (2011- 2013) and provide tech support for pilot customers.
+***</li>
 <li><p>Senior software engineer, Chunghwa Telecom, Taipei Taiwan, Jan 2003 - Apr 2007</p></li>
 <li><p>Content Management System
 -- Develop with Interwoven Teamsite and in-house J2EE based CMS to better redistribute and manage different contents—- music, news, video-streaming, online games, blogging and photos.
