Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -34,29 +34,38 @@
 
 <ul>
 <li>Project Lead, Oracle Corporation, CA US, Mar 2013 – Present
-** CLM</li>
-<li>Sr. Application Developer, Oracle Corporation, CA US, Mar 2011 – 2013
-** Develop product enhancement-- purchasing update APIs, Endeca integration, and Oracle Supplier Network application.
-** Initiate China procurement development team and provided on-site knowledge transition.</li>
-<li>Application Developer, Oracle Corporation, CA US, Mar 2009 – 2011
-** Develop spend-classification application with Oracle BI, data miner, and ADF; conduct hands-on lab sessions in Oracle OpenWorld (2011- 2013) and provide tech support for pilot customers.
-***</li>
-<li><p>Senior software engineer, Chunghwa Telecom, Taipei Taiwan, Jan 2003 - Apr 2007</p></li>
-<li><p>Content Management System
--- Develop with Interwoven Teamsite and in-house J2EE based CMS to better redistribute and manage different contents—- music, news, video-streaming, online games, blogging and photos.
--- Serve as the customer liaison between content providers/aggregators and the technical contact for internal content managers.</p></li>
-</ul>
-
-<p>-- Oracle DBA and system administrator
---- Administrate and performance tuning internal Oracle databases; also provide trainings to subordinates and outsourced technical support.
---- Administrate Linux servers and middle-tier weblogic servers.</p>
 
 <ul>
-<li>Chunghwa Telecom AAA Micro-Payment System
---  Develop and maintain online micropayment system through Chunghwa Telecom legacy payment gateway with J2EE
--- Introduce the Rational Unified Process framework to the organization</li>
-<li>Taiwan Railway Voice Reservation System
--- Migrate the legacy system to a new Voice XML and J2EE based system— enhanced the maintainability (4 hrs to 20 mins TTR), scalability, capacity (200 concurrent sessions to 3,000+), performance (avg. response time from 2 secs to 0.5)</li>
+<li>CLM</li>
+<li>test</li>
+</ul>
+</li>
+<li>Sr. Application Developer, Oracle Corporation, CA US, Mar 2011 – 2013
+
+<ul>
+<li>Develop product enhancement-- purchasing update APIs, Endeca integration, and Oracle Supplier Network application.</li>
+<li>Initiate China procurement development team and provided on-site knowledge transition.</li>
+</ul>
+</li>
+<li>
+<p>Application Developer, Oracle Corporation, CA US, Mar 2009 – 2011</p>
+
+<ul>
+<li>Develop spend-classification application with Oracle BI, data miner, and ADF; conduct hands-on lab sessions in Oracle OpenWorld (2011- 2013) and provide tech support for pilot customers.</li>
+</ul>
+</li>
+<li>
+<p>Senior software engineer, Chunghwa Telecom, Taipei Taiwan, Jan 2003 - Apr 2007</p>
+
+<ul>
+<li>Content Management System, develop with Interwoven Teamsite and in-house J2EE based CMS to better redistribute and manage different contents—- music, news, video-streaming, online games, blogging and photos.</li>
+<li><p>Serve as the customer liaison between content providers/aggregators and the technical contact for internal content managers.</p></li>
+<li><p>Oracle DBA and system administrator, administrate and performance tuning internal Oracle databases; also provide trainings to subordinates and outsourced technical support. Administrate Linux servers and middle-tier weblogic servers.</p></li>
+<li><p>Chunghwa Telecom AAA Micro-Payment System, develop and maintain online micropayment system through Chunghwa Telecom legacy payment gateway with J2EE</p></li>
+<li>Introduce the Rational Unified Process framework to the organization</li>
+<li>Taiwan Railway Voice Reservation System, migrate the legacy system to a new Voice XML and J2EE based system— enhanced the maintainability (4 hrs to 20 mins TTR), scalability, capacity (200 concurrent sessions to 3,000+), performance (avg. response time from 2 secs to 0.5)</li>
+</ul>
+</li>
 </ul>
 
 <h3>
@@ -64,12 +73,24 @@
 
 <ul>
 <li>Multimedia Decision Making Case Study Authoring Platform, Carnegie Mellon University, Aug 2007 – Dec 2008
--- Develop .NET framework(WPF) based case study authoring tools for authors and readers</li>
+
+<ul>
+<li>Develop .NET framework(WPF) based case study authoring tools for authors and readers</li>
+</ul>
+</li>
 <li>Giraffe, Carnegie Mellon University, Jan 2008 – May 2008
--- Develop a location-based parking space reserving prototype (Android)</li>
+
+<ul>
+<li>Develop a location-based parking space reserving prototype (Android)</li>
+</ul>
+</li>
 <li>Analysis Tools Integration, Carnegie Mellon University, May 2008 – Aug 2008
--- Evaluate the open source Service Oriented Architecture frameworks—ServiceMix, OpenESB, Mule, Camel and implement a prototype to incorporate the legacy systems with dynamic routes capability
+
+<ul>
+<li>Evaluate the open source Service Oriented Architecture frameworks—ServiceMix, OpenESB, Mule, Camel and implement a prototype to incorporate the legacy systems with dynamic routes capability
 ### Education</li>
+</ul>
+</li>
 <li>Master, Software Engineering, Carnegie Mellon University, Dec. 2008 </li>
 <li>Master, Information Management, National Taiwan University, Jun. 2002 </li>
 <li>Bachelor, Information Management, National Taiwan University, Jun. 2000</li>
