Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,65 +32,57 @@
 <h3>
 <a id="professional-experience" class="anchor" href="#professional-experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional experience</h3>
 
-<ul>
-<li>Project Lead, Oracle Corporation, CA US, Mar 2013 – Present
+<p><strong>Project Lead, Oracle Corporation, CA US, Mar 2013 – Present</strong></p>
 
 <ul>
 <li>CLM</li>
 <li>test</li>
 </ul>
-</li>
-<li>Sr. Application Developer, Oracle Corporation, CA US, Mar 2011 – 2013
+
+<p><strong>Senior Application Developer, Oracle Corporation, CA US, Mar 2009 – 2013</strong></p>
 
 <ul>
 <li>Develop product enhancement-- purchasing update APIs, Endeca integration, and Oracle Supplier Network application.</li>
 <li>Initiate China procurement development team and provided on-site knowledge transition.</li>
-</ul>
-</li>
-<li>
-<p>Application Developer, Oracle Corporation, CA US, Mar 2009 – 2011</p>
-
-<ul>
 <li>Develop spend-classification application with Oracle BI, data miner, and ADF; conduct hands-on lab sessions in Oracle OpenWorld (2011- 2013) and provide tech support for pilot customers.</li>
 </ul>
-</li>
-<li>
-<p>Senior software engineer, Chunghwa Telecom, Taipei Taiwan, Jan 2003 - Apr 2007</p>
+
+<p><strong>Senior software engineer, Chunghwa Telecom, Taipei Taiwan, Jan 2003 - Apr 2007</strong></p>
 
 <ul>
 <li>Content Management System, develop with Interwoven Teamsite and in-house J2EE based CMS to better redistribute and manage different contents—- music, news, video-streaming, online games, blogging and photos.</li>
-<li><p>Serve as the customer liaison between content providers/aggregators and the technical contact for internal content managers.</p></li>
-<li><p>Oracle DBA and system administrator, administrate and performance tuning internal Oracle databases; also provide trainings to subordinates and outsourced technical support. Administrate Linux servers and middle-tier weblogic servers.</p></li>
-<li><p>Chunghwa Telecom AAA Micro-Payment System, develop and maintain online micropayment system through Chunghwa Telecom legacy payment gateway with J2EE</p></li>
+<li>Serve as the customer liaison between content providers/aggregators and the technical contact for internal content managers.</li>
+<li>Oracle DBA and system administrator, administrate and performance tuning internal Oracle databases; also provide trainings to subordinates and outsourced technical support. Administrate Linux servers and middle-tier weblogic servers.</li>
+<li>Chunghwa Telecom AAA Micro-Payment System, develop and maintain online micropayment system through Chunghwa Telecom legacy payment gateway with J2EE</li>
 <li>Introduce the Rational Unified Process framework to the organization</li>
 <li>Taiwan Railway Voice Reservation System, migrate the legacy system to a new Voice XML and J2EE based system— enhanced the maintainability (4 hrs to 20 mins TTR), scalability, capacity (200 concurrent sessions to 3,000+), performance (avg. response time from 2 secs to 0.5)</li>
-</ul>
-</li>
 </ul>
 
 <h3>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
 
-<ul>
-<li>Multimedia Decision Making Case Study Authoring Platform, Carnegie Mellon University, Aug 2007 – Dec 2008
+<p><strong>Multimedia Decision Making Case Study Authoring Platform</strong></p>
 
 <ul>
 <li>Develop .NET framework(WPF) based case study authoring tools for authors and readers</li>
 </ul>
-</li>
-<li>Giraffe, Carnegie Mellon University, Jan 2008 – May 2008
+
+<p><strong>Giraffe, Carnegie Mellon University</strong></p>
 
 <ul>
 <li>Develop a location-based parking space reserving prototype (Android)</li>
 </ul>
-</li>
-<li>Analysis Tools Integration, Carnegie Mellon University, May 2008 – Aug 2008
+
+<p><strong>Analysis Tools Integration, Carnegie Mellon University</strong></p>
 
 <ul>
-<li>Evaluate the open source Service Oriented Architecture frameworks—ServiceMix, OpenESB, Mule, Camel and implement a prototype to incorporate the legacy systems with dynamic routes capability
-### Education</li>
+<li>Evaluate the open source Service Oriented Architecture frameworks—ServiceMix, OpenESB, Mule, Camel and implement a prototype to incorporate the legacy systems with dynamic routes capability</li>
 </ul>
-</li>
+
+<h3>
+<a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h3>
+
+<ul>
 <li>Master, Software Engineering, Carnegie Mellon University, Dec. 2008 </li>
 <li>Master, Information Management, National Taiwan University, Jun. 2002 </li>
 <li>Bachelor, Information Management, National Taiwan University, Jun. 2000</li>
