--- a/index.html
+++ b/index.html
@@ -15,31 +15,32 @@
 
     <header>
       <div class="container">
-        <h1>ChihWei (Derek) Chang, Not a Ninja Developer</h1>
-        <h2>Java, SQL, Python, Flask, Oracle DBA, J2EE</h2>
+        <h1>ChihWei (Derek) Chang</h1>
+        <h2>Not a Ninja Developer</h2>
 
         <section id="downloads">
           <a href="https://github.com/Solaris0627" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://www.linkedin.com/pub/derek-chang/8/899/67" class="btn btn-github"><span class="icon"></span>LinkedIn</a>
+          <a href="mailto:derekchang@live" class="btn btn-github"><span class="icon"></span>Mail me</a>
         </section>
       </div>
     </header>
 
     <div class="container">
       <section id="main_content">
-        <h3>
-<a id="yes-not-a-ninja-developer-looking-for-a-job" class="anchor" href="#yes-not-a-ninja-developer-looking-for-a-job" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yes, not a ninja developer looking for a job.</h3>
+
 
 <h3>
 <a id="professional-experience" class="anchor" href="#professional-experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional experience</h3>
 
-<p><strong>Project Lead, Oracle Corporation, CA US, Mar 2013 – Present</strong></p>
+<h4>Project Lead, Oracle Corporation, CA US, June 2013 – Present</h4>
 
 <ul>
 <li>CLM</li>
 <li>test</li>
 </ul>
 
-<p><strong>Senior Application Developer, Oracle Corporation, CA US, Mar 2009 – 2013</strong></p>
+<h4>Senior Application Developer, Oracle Corporation, CA US, Mar 2009 – 2013</h4>
 
 <ul>
 <li>Develop product enhancement-- purchasing update APIs, Endeca integration, and Oracle Supplier Network application.</li>
@@ -47,33 +48,32 @@
 <li>Develop spend-classification application with Oracle BI, data miner, and ADF; conduct hands-on lab sessions in Oracle OpenWorld (2011- 2013) and provide tech support for pilot customers.</li>
 </ul>
 
-<p><strong>Senior software engineer, Chunghwa Telecom, Taipei Taiwan, Jan 2003 - Apr 2007</strong></p>
-
+<h4>Senior software engineer, Chunghwa Telecom, Taipei Taiwan, Jan 2003 - Apr 2007</h4>
+<strong>Content Management System</strong>, develop with Interwoven Teamsite and in-house J2EE based CMS to better redistribute and manage different contents—- music, news, video-streaming, online games, blogging and photos.
 <ul>
-<li>Content Management System, develop with Interwoven Teamsite and in-house J2EE based CMS to better redistribute and manage different contents—- music, news, video-streaming, online games, blogging and photos.</li>
 <li>Serve as the customer liaison between content providers/aggregators and the technical contact for internal content managers.</li>
 <li>Oracle DBA and system administrator, administrate and performance tuning internal Oracle databases; also provide trainings to subordinates and outsourced technical support. Administrate Linux servers and middle-tier weblogic servers.</li>
-<li>Chunghwa Telecom AAA Micro-Payment System, develop and maintain online micropayment system through Chunghwa Telecom legacy payment gateway with J2EE</li>
-<li>Introduce the Rational Unified Process framework to the organization</li>
-<li>Taiwan Railway Voice Reservation System, migrate the legacy system to a new Voice XML and J2EE based system— enhanced the maintainability (4 hrs to 20 mins TTR), scalability, capacity (200 concurrent sessions to 3,000+), performance (avg. response time from 2 secs to 0.5)</li>
 </ul>
+<strong>Chunghwa Telecom AAA Micro-Payment System</strong>, develop and maintain online micropayment system through Chunghwa Telecom legacy payment gateway with J2EE
+<ul>
+  <li>Introduce the Rational Unified Process framework to the organization</li>
+</ul>
+
+<strong>Taiwan Railway Voice Reservation System</strong>, migrate the legacy system to a new Voice XML and J2EE based system— enhanced the maintainability (4 hrs to 20 mins TTR), scalability, capacity (200 concurrent sessions to 3,000+), performance (avg. response time from 2 secs to 0.5)
 
 <h3>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
 
-<p><strong>Multimedia Decision Making Case Study Authoring Platform</strong></p>
+<h4>Multimedia Decision Making Case Study Authoring Platform</h4>Develop .NET framework(WPF) based case study authoring tools for authors and readers
 
-<ul>
-<li>Develop .NET framework(WPF) based case study authoring tools for authors and readers</li>
-</ul>
 
-<p><strong>Giraffe, Carnegie Mellon University</strong></p>
+<h4>Giraffe, Carnegie Mellon University</h4>
 
 <ul>
 <li>Develop a location-based parking space reserving prototype (Android)</li>
 </ul>
 
-<p><strong>Analysis Tools Integration, Carnegie Mellon University</strong></p>
+<h4>Analysis Tools Integration, Carnegie Mellon University</h4>
 
 <ul>
 <li>Evaluate the open source Service Oriented Architecture frameworks—ServiceMix, OpenESB, Mule, Camel and implement a prototype to incorporate the legacy systems with dynamic routes capability</li>
