added css, TODO:wording

--- a/index.html
+++ b/index.html
@@ -3,21 +3,16 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
     <title>ChihWei (Derek) Chang, Not a Ninja Developer by Solaris0627</title>
   </head>
-
   <body>
-
     <header>
       <div class="container">
-        <h1>ChihWei (Derek) Chang</h1>
+        <h1>SELECT * FROM ChihWei_(Derek)_Chang</h1>
         <h2>Not a Ninja Developer</h2>
-
         <section id="downloads">
           <a href="https://github.com/Solaris0627" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
           <a href="https://www.linkedin.com/pub/derek-chang/8/899/67" class="btn btn-github"><span class="icon"></span>LinkedIn</a>
@@ -25,83 +20,69 @@
         </section>
       </div>
     </header>
-
     <div class="container">
       <section id="main_content">
+        <h3>
+        <a id="professional-experience" class="anchor" href="#professional-experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional experience</h3>
+        <hr/>
+        <h4>Project Lead, Oracle Corporation, CA US, June 2013 – Present</h4>
+        <ul>
+          <li>CLM</li>
+          <li>test</li>
+          <strong>test</strong>
+        </ul>
+        <h4>Senior Application Developer, Oracle Corporation, CA US, Mar 2009 – 2013</h4>
+        <ul>
+          <li>Develop product enhancement-- purchasing update APIs, Endeca integration, and Oracle Supplier Network application.</li>
+          <li>Initiate China procurement development team and provided on-site knowledge transition.</li>
+          <li>Develop spend-classification application with Oracle BI, data miner, and ADF; conduct hands-on lab sessions in Oracle OpenWorld (2011- 2013) and provide tech support for pilot customers.</li>
+        </ul>
+        <h4 class="positions">Senior software engineer, Chunghwa Telecom, Taipei Taiwan, Jan 2003 - Apr 2007</h4>
+        <u class="projects">Content Management System</u>, develop with Interwoven Teamsite and in-house J2EE based CMS to better redistribute and manage different contents—- music, news, video-streaming, online games, blogging and photos.
+        <ul>
+          <li>Serve as the customer liaison between content providers/aggregators and the technical contact for internal content managers.</li>
+          <li>Oracle DBA and system administrator, administrate and performance tuning internal Oracle databases; also provide trainings to subordinates and outsourced technical support. Administrate Linux servers and middle-tier weblogic servers.</li>
+          <li><u class="hashtags">Java, #J2EE, #Hibernate, #Spring, #Linux, #Oracle DBA, #Weblogic</u></li>
+        </ul>
+        <u class="projects">Chunghwa Telecom AAA Micro-Payment System</u>, develop and maintain online micropayment system through Chunghwa Telecom legacy payment gateway with J2EE
+        <ul>
+          <li>Introduce the Rational Unified Process framework to the organization</li>
+        </ul>
+        <u class="projects">Taiwan Railway Voice Reservation System</u>, migrate the legacy system to a new Voice XML and J2EE based system— enhanced the maintainability (4 hrs to 20 mins TTR), scalability, capacity (200 concurrent sessions to 3,000+), performance (avg. response time from 2 secs to 0.5) <u class="hashtags">VXML, #Sevlet, #WebServices</u>
+        <h3>
+        <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
+        <hr/>
+        <ul>
+          <li>
+            <u class="projects">Multimedia Decision Making Case Study Authoring Platform</u>, develop .NET framework(WPF) based case study authoring tools for authors and readers
+          </li>
+          <li><u class="projects">Giraffe, Carnegie Mellon University</u>, a location-based parking space reserving prototype (Android)</li>
+          <li><u class="projects">Analysis Tools Integration, Carnegie Mellon University</u>
+            Evaluate the open source Service Oriented Architecture frameworks—ServiceMix, OpenESB, Mule, Camel and implement a prototype to incorporate the legacy systems with dynamic routes capability
+          </li>
+        </ul>
+        
+        <h3>
+        <a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h3>
+        <hr/>
+        <ul>
+          <li>Master, Software Engineering, Carnegie Mellon University, Dec. 2008 </li>
+          <li>Master, Information Management, National Taiwan University, Jun. 2002 </li>
+          <li>Bachelor, Information Management, National Taiwan University, Jun. 2000</li>
+        </ul>
+        <h3>
+        <a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact me</h3>
+        <hr/>
+        <ul>
+          <li>Email: <a href="mailto:derekchang@live.com">derekchang@live.com</a>
+        </li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/pub/derek-chang/8/899/67">https://www.linkedin.com/pub/derek-chang/8/899/67</a>
+      </li>
+      <li>Github: <a href="https://github.com/solaris0627" class="user-mention">@solaris0627</a>
+    </li>
+  </ul>
+</section>
+</div>
 
-
-<h3>
-<a id="professional-experience" class="anchor" href="#professional-experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional experience</h3>
-
-<h4>Project Lead, Oracle Corporation, CA US, June 2013 – Present</h4>
-
-<ul>
-<li>CLM</li>
-<li>test</li>
-</ul>
-
-<h4>Senior Application Developer, Oracle Corporation, CA US, Mar 2009 – 2013</h4>
-
-<ul>
-<li>Develop product enhancement-- purchasing update APIs, Endeca integration, and Oracle Supplier Network application.</li>
-<li>Initiate China procurement development team and provided on-site knowledge transition.</li>
-<li>Develop spend-classification application with Oracle BI, data miner, and ADF; conduct hands-on lab sessions in Oracle OpenWorld (2011- 2013) and provide tech support for pilot customers.</li>
-</ul>
-
-<h4>Senior software engineer, Chunghwa Telecom, Taipei Taiwan, Jan 2003 - Apr 2007</h4>
-<strong>Content Management System</strong>, develop with Interwoven Teamsite and in-house J2EE based CMS to better redistribute and manage different contents—- music, news, video-streaming, online games, blogging and photos.
-<ul>
-<li>Serve as the customer liaison between content providers/aggregators and the technical contact for internal content managers.</li>
-<li>Oracle DBA and system administrator, administrate and performance tuning internal Oracle databases; also provide trainings to subordinates and outsourced technical support. Administrate Linux servers and middle-tier weblogic servers.</li>
-</ul>
-<strong>Chunghwa Telecom AAA Micro-Payment System</strong>, develop and maintain online micropayment system through Chunghwa Telecom legacy payment gateway with J2EE
-<ul>
-  <li>Introduce the Rational Unified Process framework to the organization</li>
-</ul>
-
-<strong>Taiwan Railway Voice Reservation System</strong>, migrate the legacy system to a new Voice XML and J2EE based system— enhanced the maintainability (4 hrs to 20 mins TTR), scalability, capacity (200 concurrent sessions to 3,000+), performance (avg. response time from 2 secs to 0.5)
-
-<h3>
-<a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
-
-<h4>Multimedia Decision Making Case Study Authoring Platform</h4>Develop .NET framework(WPF) based case study authoring tools for authors and readers
-
-
-<h4>Giraffe, Carnegie Mellon University</h4>
-
-<ul>
-<li>Develop a location-based parking space reserving prototype (Android)</li>
-</ul>
-
-<h4>Analysis Tools Integration, Carnegie Mellon University</h4>
-
-<ul>
-<li>Evaluate the open source Service Oriented Architecture frameworks—ServiceMix, OpenESB, Mule, Camel and implement a prototype to incorporate the legacy systems with dynamic routes capability</li>
-</ul>
-
-<h3>
-<a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h3>
-
-<ul>
-<li>Master, Software Engineering, Carnegie Mellon University, Dec. 2008 </li>
-<li>Master, Information Management, National Taiwan University, Jun. 2002 </li>
-<li>Bachelor, Information Management, National Taiwan University, Jun. 2000</li>
-</ul>
-
-<h3>
-<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact me</h3>
-
-<ul>
-<li>Email: <a href="mailto:derekchang@live.com">derekchang@live.com</a>
-</li>
-<li>LinkedIn: <a href="https://www.linkedin.com/pub/derek-chang/8/899/67">https://www.linkedin.com/pub/derek-chang/8/899/67</a>
-</li>
-<li>Github: <a href="https://github.com/solaris0627" class="user-mention">@solaris0627</a>
-</li>
-</ul>
-      </section>
-    </div>
-
-    
-  </body>
+</body>
 </html>
