changed title, TODO:wording

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="container">
         <h1>SELECT * FROM ChihWei_(Derek)_Chang</h1>
-        <h2>Not a Ninja Developer</h2>
+        <h2>WHERE A_Ninja_Developer = 'NO' ORDER BY works DESC</h2>
         <section id="downloads">
           <a href="https://github.com/Solaris0627" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
           <a href="https://www.linkedin.com/pub/derek-chang/8/899/67" class="btn btn-github"><span class="icon"></span>LinkedIn</a>
