changed hashtags, TODO:wording

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
           <li>Develop spend-classification application with Oracle BI, data miner, and ADF; conduct hands-on lab sessions in Oracle OpenWorld (2011- 2013) and provide tech support for pilot customers.</li>
         </ul>
         <h4 class="positions">Senior software engineer, Chunghwa Telecom, Taipei Taiwan, Jan 2003 - Apr 2007</h4>
-        <u class="projects">Content Management System</u>, develop with Interwoven Teamsite and in-house J2EE based CMS to better redistribute and manage different contents—- music, news, video-streaming, online games, blogging and photos.
+        <u class="projects">Content Management System</u>, develop with Interwoven Teamsite and in-house J2EE based CMS to better redistribute and manage different contents—- music, news, video-streaming, online games, blogging and photos.<u class="hashtags">Java, #J2EE, #Hibernate, #Spring, #Linux, #Oracle DBA, #Weblogic, #Apache, #Squid</u>
         <ul>
           <li>Serve as the customer liaison between content providers/aggregators and the technical contact for internal content managers.</li>
           <li>Oracle DBA and system administrator, administrate and performance tuning internal Oracle databases; also provide trainings to subordinates and outsourced technical support. Administrate Linux servers and middle-tier weblogic servers.</li>
-          <li><u class="hashtags">Java, #J2EE, #Hibernate, #Spring, #Linux, #Oracle DBA, #Weblogic</u></li>
         </ul>
-        <u class="projects">Chunghwa Telecom AAA Micro-Payment System</u>, develop and maintain online micropayment system through Chunghwa Telecom legacy payment gateway with J2EE
+        <u class="projects">Chunghwa Telecom AAA Micro-Payment System</u>, develop and maintain online micropayment system through Chunghwa Telecom legacy payment gateway with J2EE. <u class="hashtags">RUP</u>
         <ul>
           <li>Introduce the Rational Unified Process framework to the organization</li>
         </ul>
-        <u class="projects">Taiwan Railway Voice Reservation System</u>, migrate the legacy system to a new Voice XML and J2EE based system— enhanced the maintainability (4 hrs to 20 mins TTR), scalability, capacity (200 concurrent sessions to 3,000+), performance (avg. response time from 2 secs to 0.5) <u class="hashtags">VXML, #Sevlet, #WebServices</u>
+        <u class="projects">Taiwan Railway Voice Reservation System</u>, refactor the legacy system to a new Voice XML and J2EE based system. <u class="hashtags">VXML, #Servlet, #WebServices</u>
+        <ul><li>Enhanced the maintainability (4 hrs to 20 mins TTR), scalability, capacity (200 concurrent sessions to 3,000+), performance (avg. response time from 2 secs to 0.5)</li></ul> 
         <h3>
         <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
         <hr/>
