--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li>Improve and communicate technical processes of product development lifecycle; coach and mentor team members with defining Product/Application technical & coding standards and guidelines.</li>
           <li>Initiated, mentored and delegated to China procurement development team and provided on-site knowledge transition to facilitate their development.</li>
         </ul>
-        <u class="projects">Procurement solution enhancement with information discovery and business intelligence</u>, built the data mining and integration techniques for analysizing structured and unstructured transactional dataset of large ERP, both within or external, to enhance business processes, improves spend/performance visibility, and user experiences.
+        <u class="projects">Procurement solution enhancement projects</u>, built the data mining and integration techniques for analysizing structured and unstructured transactional dataset of large ERP, both within or external, to enhance business processes, improves spend/performance visibility, and user experiences with information discovery and business intelligence.
         <u class="hashtags">Oracle Business Intelligence, #Spend Classification, #Endeca, #web service</u>
         <ul>
           <li>Refine and communicate architectural designs with peers and senior management for iterations to consolidate the integrations of Oracle BI products and EBS procurement--  collaborates on solutions across teams across Business Units</li>
