--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-    <title>ChihWei (Derek) Chang, Not a Ninja Developer by Solaris0627</title>
+    <title>ChihWei (Derek) Chang</title>
   </head>
   <body>
     <header>
