update with gigwalk experiences

--- a/index.html
+++ b/index.html
@@ -25,9 +25,21 @@
         <h3>
         <a id="professional-experience" class="anchor" href="#professional-experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional experience</h3>
         <hr/>
-        <h4>Project Lead, Oracle Corporation, CA US, June 2009 – Present</h4>
-        <u class="projects">E-Business Suite Procurement applications</u>, develop and support the EBS Procurement together with related Financials, Projects, Suppliers management, Asset Tracking, Planning applications.
-        <u class="hashtags">Oracle iProcurement, #Purchasing, #CLM, #Java, #OAF, #MVC, #PL/SQL</u>
+        <h4>Technical Lead, Gigwalk Inc., CA US, Nov 2015 – Present</h4>
+        <u class="projects">Gigwak backend platform</u>, design and implement RESTful apis consumed by front end, mobile applications, and our enterprise clients; pipeline dataset with the background tasks; provide basic analytics and reporting to the clients
+        <u class="hashtags">Python, #Flask, #Postgres, #mongoDB, #Elasticsearch, #AWS, #celery task, #Rabbitmq</u>
+        <ul>
+          <li>Lead a 7 people backend team-- improve the development process, help planning for releases and increase development velocity over 80%</li>
+          <li>Lead the efforts of designing/implementing features of backend services, most line-of-code committed as an individual contributor and most code reviews done as a code reviewer within the backend team</li>
+          <li>Improve the api endpoint and celery tasks performance with faster response time (50% to 30 times faster), and optimize the infrastructure cost(30% lower)</li>
+          <li>Lead the efforts of refactoring, unit testing, and managing technical debts to improve quality: 70% test coverage from no CI and regression is down 60%</li>
+          <li>Lead the efforts for technical documentation and knowledge sharing-- 5 times more wiki pages and the onboarding process shortened from 2 weeks to 3 days.</li>
+        </ul>
+
+        <h4>Project Lead, Oracle Corporation, CA US, June 2009 – Oct 2015</h4>
+
+        <u class="projects">E-Business Suite Procurement applications</u>, develop and support the EBS Procurement together with related Financials, Projects, Suppliers management, Asset Tracking, Planning applications.<u class="hashtags">PL/SQL, #JAVA</u>
+        <br/>
         <ul>
           <li>As part of maintenance of Oracle EBS Procurement (Oracle iProcurement, Purchasing, and CLM), involve in handling customer issues and customer business needs/processes, provided clients with a code fix or suggested them the suitable way to extend/customize the application.</li>
           <li>Actively participate in Customer Advisory board, Field Advisory board & Oracle Open World presenting new functionalities to customers, partners, sales team & consultants.</li>
@@ -35,24 +47,27 @@
           <li>Initiated, mentored and delegated to China procurement development team and provided on-site knowledge transition to facilitate their development.</li>
         </ul>
         <u class="projects">Procurement solution enhancement projects</u>, built the data mining and integration techniques for analyzing structured and unstructured transactional dataset of large ERP, both within or external, to enhance business processes, improves spend/performance visibility, and user experiences with information discovery and business intelligence.
-        <u class="hashtags">Oracle Business Intelligence, #Spend Classification, #Endeca, #web service</u>
         <ul>
           <li>Refine and communicate architectural designs with peers and senior management for iterations to consolidate the integrations of Oracle BI products and EBS procurement--  collaborates on solutions across teams across Business Units</li>
           <li>Lead a team to develop an intelligence-base spend classification to discover existing patterns and taxonomies, assign disorganized data into appropriate categories, and automates classifying heterogeneous data into a single taxonomy </li>
           <li>Build knowledge and hands-on ETL experience in data design/dimensional data modeling-- utilize Oracel Endeca solution to restructure Procurement transactional dataset and external data source to provide faster analytics and a consumer-friendly user interface</li>
           <li>Aggregated the customer requests, delivered the design documentation and implemented Purchasing webservices APIs</li>
         </ul>
+
         <h4 class="positions">Senior software engineer, Chunghwa Telecom, Taipei Taiwan, Jan 2003 - Apr 2007</h4>
-        <u class="projects">Content Management System</u>, developed with Interwoven Teamsite and in-house CMS to better redistribute and manage different contents—- music, news, video-streaming, online games, blogging and photos.
+        <u class="projects">Content Management System</u>, developed with Interwoven Teamsite and in-house CMS to better redistribute and manage different contents—- music, news, video-streaming, online games, blogging and photos.<u class="hashtags">J2EE, #Hibernate, #Spring, #Linux, #Oracle DBA, #Weblogic, #Apache, #Squid</u>
+        <br/>
         <ul>
-        <u class="hashtags">J2EE, #Hibernate, #Spring, #Linux, #Oracle DBA, #Weblogic, #Apache, #Squid</u> </li>
+        </li>
         <li>Architected the in-house CMS, implemented the core design, and communicated the design to stakeholders.
           <li>Served as the customer liaison between content providers/aggregators and the technical contact for internal content managers/contributors.</li>
           <li>Administrated internal linux servers, middle-tier weblogic servers, application deployments and Oracle databases; provided trainings to managed subordinates and outsourced development team</li>
         </ul>
         <u class="projects">Taiwan Railway Voice Reservation System</u>, refactored the legacy system with Voice XML and J2EE based system.
-        <ul><u class="hashtags">VXML, #Servlet, #WebServices</u>
+        <ul>
           <li>Enhanced the maintainability (4 hrs to 20 mins TTR), scalability, capacity (200 concurrent sessions to 3,000+), performance (avg. response time from 2 secs to 0.5)</li></ul>
+        
+
           <h3>
           <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
           <hr/>
